...
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@android:color/transparent"
        android:theme="@style/Theme.FindMovies.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/TextAppearance.FindMovies.Title.Collapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleGravity="bottom|left"
...
                android:id="@+id/detailPlaceholder"
                layout="@layout/layout_detail_placeholder" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_to_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/title_favorite"
...
