<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_tv_shows"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/items_poster" />

    <ImageView
        android:id="@+id/img_empty"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/title_movie"
        android:src="@drawable/ic_garbage_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:text="@string/empty_favorites_list"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/img_empty"
        app:layout_constraintStart_toStartOf="@+id/img_empty"
        app:layout_constraintTop_toBottomOf="@+id/img_empty" />

</androidx.constraintlayout.widget.ConstraintLayout>